# disnake-ext-jishaku

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  format.yml  lint.yml  pre-commit.yml  type-check.yml
disnake/ext/jishaku/: __init__.py  __main__.py  codeblocks.py  cog.py  exception_handling.py  flags.py  formatting.py  functools.py  help_command.py  math.py  meta.py  models.py  modules.py  paginators.py  shell.py  types.py
disnake/ext/jishaku/features/: baseclass.py  filesystem.py  guild.py  invocation.py  management.py  python.py  root_command.py  shell.py  sql.py  voice.py  youtube.py
disnake/ext/jishaku/repl/: __init__.py  compilation.py  disassembly.py  inspections.py  repl_builtins.py  scope.py  walkers.py
docs/: api.rst  changelog.rst  conf.py  index.rst  requirements.txt
tests/: manual_test_blockformat.py  manual_test_multiclass.py  manual_test_specialist.py  subclassed_module_1.py  subclassed_module_2.py  test_ast.py  test_cog.py  test_converter.py  test_executorfunc.py  test_hljs.py  test_inspections.py  test_model.py  test_paginator.py  test_repl.py  test_shell.py  test_subclassing.py  utils.py
